<resources>
    <string name="app_name"> 邀您吃饭  </string>
    <string name="main_act_bottom_tab_today_gp">定餐</string>
    <string name="main_act_bottom_tab_ambitus_gp">周边团购</string>
    <string name="main_act_bottom_tab_search_gp">团购搜索</string>
    <string name="main_act_bottom_tab_my_lashou">我的拉手</string>
    <string name="commodity_act_order_btn_distance">最近</string>
    <string name="commodity_act_order_btn_capacity">智能</string>
    <string name="commodity_act_order_btn_new">最新</string>
    <string name="commodity_act_order_btn_popularity">人气</string>
    <string name="commodity_act_order_btn_price">价格</string>
    <string name="about">简介</string>
    <string name="detail">详情</string>
    <string name="list">名单</string>
    <string name="xiegang">/</string>
    <string name="buy">购 买</string>
    <string name="about_us">关于我们</string>
    <string name="my_order">我的订单</string>
    <string name="my_ticket">我的拉手券</string>
    <string name="ticket_detail">拉手券详情</string>
    <string name="my_collect">我的收藏</string>
    <string name="nopay">未付款</string>
    <string name="payed">已付款</string>
    <string name="ticket_state_1">未使用</string>
    <string name="ticket_state_2">已使用</string>
    <string name="ticket_state_3">已过期</string>
    <string name="commodity_info">商品信息</string>
    <string name="delete_all">删除全部</string>
    <string name="no_date" />
    <string name="login_act">登 录</string>
    <string name="register_act">注 册</string>
    <string name="to_register">快速注册拉手网账户</string>
    <string name="login_dialog_title">正在登录…</string>
    <string name="flush_dialog_title">正在刷新…</string>
    <string name="loading_dialog_title">正在加载数据…</string>
    <string name="login_dialog_message">请稍候…</string>
    <string name="login_welcome_toast">登录成功,欢迎使用拉手团购安卓版</string>
    <string name="search_label">搜索商品</string>
    <string name="search_hint">输入搜索关键词</string>
    <string name="must_write">请填写完整再提交！</string>
    <string name="please_login">您还没有登陆,请先登录！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="this_buy">本次团购您只能购买</string>
    <string name="this_goods">个该商品！</string>
    <string name="username_hint">请输入用户名</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="password_hint">密码至少六位字符</string>
    <string name="loading">正在加载…</string>
    <string name="no_search_results" />
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="no_token_id">请先点击\"生成财付通订单号\"按钮得到订单号！</string>
    <string name="maps_api_key">c2b0f58a6f09cafd1503c06ef08ac7aeb7ddb91adb5478fbc9030b6e31e654b05fdeb112337607ff</string>
    <string name="company_name">北京拉手网络技术有限公司</string>
    <string name="upomp_bypay_sessionhint">由于您过长时间未操作，此次交易已失效，请退出支付，并重新进行交易。是否立即退出支付？</string>
    <string name="upomp_bypay_error">错误</string>
    <string name="upomp_bypay_linkerror">网络连接错误，请重新尝试！</string>
    <string name="upomp_bypay_fileerror">系统检测到您的手机POS已被恶意修改，为确保您的支付安全，请重新安装使用！</string>
    <string name="upomp_bypay_please">"请过 "</string>
    <string name="upomp_bypay_sendMac">" 秒后再发送验证码!"</string>
    <string name="upomp_bypay_get">获取</string>
    <string name="upomp_bypay_debitcard">借记卡</string>
    <string name="upomp_bypay_creditcard">信用卡</string>
    <string name="upomp_bypay_sixtotwenty">6~20位字符组合</string>
    <string name="upomp_bypay_sixtotwelve">6~12位字符组合</string>
    <string name="upomp_bypay_twotosixteen">2~16位字符组合</string>
    <string name="upomp_bypay_firstmobilenum">手 机 号 码 :</string>
    <string name="upomp_bypay_secondmobilenum">手机号码</string>
    <string name="upomp_bypay_thirdmobilenum">手机号码:</string>
    <string name="upomp_bypay_loading">登录</string>
    <string name="upomp_bypay_register">注册</string>
    <string name="upomp_bypay_username">"用   户   名  :"</string>
    <string name="upomp_bypay_firstshortmessagesecuritycode">短信验证码:</string>
    <string name="upomp_bypay_secondshortmessagesecuritycode">6位短信验证码</string>
    <string name="upomp_bypay_selectcard">选 择 卡 种 :</string>
    <string name="upomp_bypay_firstcardid">银行卡卡号:</string>
    <string name="upomp_bypay_secondcardid">银行卡卡号</string>
    <string name="upomp_bypay_firstcardpsw">银行卡密码:</string>
    <string name="upomp_bypay_secondcardpsw">银行卡密码</string>
    <string name="upomp_bypay_welcome">页面欢迎语:</string>
    <string name="upomp_bypay_hint">若与您预设的资料不符，极有可能是钓鱼软件，请终止操作。</string>
    <string name="upomp_bypay_editpass">修改密码</string>
    <string name="upomp_bypay_editinfo">更改手机号码</string>
    <string name="upomp_bypay_addcard">添加银行卡</string>
    <string name="upomp_bypay_selectdate">请选择有效期。</string>
    <string name="upomp_bypay_date">"有   效   期  :"</string>
    <string name="upomp_bypay_securityissue">安 全 问 题 :</string>
    <string name="upomp_bypay_securityquestionanswer">问 题 答 案 :</string>
    <string name="upomp_bypay_checkcode">"校   验   码  :"</string>
    <string name="upomp_bypay_payamount">支 付 金 额 :</string>
    <string name="upomp_bypay_backnum">信用卡背面末三位数字</string>
    <string name="upomp_bypay_affirm">确认</string>
    <string name="upomp_bypay_return">返回</string>
    <string name="upomp_bypay_failcause">失败原因:</string>
    <string name="upomp_bypay_cardmanage">银行卡管理</string>
    <string name="upomp_bypay_gantan">！</string>
    <string name="upomp_bypay_next">下一步</string>
    <string name="upomp_bypay_cancel">取消</string>
    <string name="upomp_bypay_getpass">忘记密码</string>
    <string name="upomp_bypay_cardtype">" 卡 类 型 :"</string>
    <string name="upomp_bypay_returnlist">返回列表</string>
    <string name="upomp_bypay_cardunknown">未知卡</string>
    <string name="upomp_bypay_removecard">解除关联</string>
    <string name="upomp_bypay_affirmremovecard">确认要解除关联本银行卡？[</string>
    <string name="upomp_bypay_changedefultcard">默认卡变更</string>
    <string name="upomp_bypay_affirmchangedefultcard">是否设置本卡为默认卡？[</string>
    <string name="upomp_bypay_prompt">提示</string>
    <string name="upomp_bypay_selectsucceed">设置成功！</string>
    <string name="upomp_bypay_selectfail">设置失败，请重新尝试！</string>
    <string name="upomp_bypay_updatelist">更新列表</string>
    <string name="upomp_bypay_balance">余额查询</string>
    <string name="upomp_bypay_changepswsucceed">修改密码成功!</string>
    <string name="upomp_bypay_newpsw">"新   密   码  :"</string>
    <string name="upomp_bypay_enternewpsw">确认新密码:</string>
    <string name="upomp_bypay_logined">已登录</string>
    <string name="upomp_bypay_payfail">支付失败</string>
    <string name="upomp_bypay_yuan">" 元"</string>
    <string name="upomp_bypay_accountmainactivity_header">我的信息</string>
    <string name="upomp_bypay_accountmain_myinfo">个人信息</string>
    <string name="upomp_bypay_accountmain_username">" 用 户 名 :"</string>
    <string name="upomp_bypay_accountmain_email">邮箱地址:</string>
    <string name="upomp_bypay_addcard_binduser">绑 定 用 户 :</string>
    <string name="upomp_bypay_addcard_cvn2">C V N 2 :</string>
    <string name="upomp_bypay_addcard_selectdefultcard">设置成默认银行卡</string>
    <string name="upomp_bypay_balanceresult_balance">余额查询结果</string>
    <string name="upomp_bypay_balanceresult_balancesucceed">余额查询成功！</string>
    <string name="upomp_bypay_balanceresult_balancefail">余额查询失败！</string>
    <string name="upomp_bypay_balanceresult_balancenumber">您的银行卡余额是</string>
    <string name="upomp_bypay_balanceresult_yuan">元。</string>
    <string name="upomp_bypay_bankrestlt_succeed">添加银行卡成功！</string>
    <string name="upomp_bypay_bankrestlt_fail">添加银行卡失败！</string>
    <string name="upomp_bypay_bankrestlt_cardid">"  卡    号  :"</string>
    <string name="upomp_bypay_bankrestlt_continuebank">继续绑卡</string>
    <string name="upomp_bypay_cardinfo_hint1">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联、余额查询。"</string>
    <string name="upomp_bypay_cardinfo_hint2">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联。"</string>
    <string name="upomp_bypay_cardinfo_removecardsucceed">银行卡解除关联成功!</string>
    <string name="upomp_bypay_cardinfo">银行卡信息</string>
    <string name="upomp_bypay_cardinfo_issuercard">发卡银行:</string>
    <string name="upomp_bypay_cardinfo_cardid">"  卡   号   :"</string>
    <string name="upomp_bypay_cardmainactivity_firstlogin">您尚未登录，请先登录再进行银行卡管理操作。</string>
    <string name="upomp_bypay_cardmainactivity_defultcard">(默认卡)</string>
    <string name="upomp_bypay_cardmainactivity_cancelbanksucced">取消绑定成功!</string>
    <string name="upomp_bypay_cardmainactivity_issuedcard">"发卡行: "</string>
    <string name="upomp_bypay_cardmainactivity_cardtype">"
卡类型: "</string>
    <string name="upomp_bypay_cardmainactivity_cardid">"
    卡号: "</string>
    <string name="upomp_bypay_cardmainactivity_close">关闭</string>
    <string name="upomp_bypay_cardmain_relevancecard">你已关联的银行卡:</string>
    <string name="upomp_bypay_cardmain_norelevancecard">你还没有关联的银行卡！</string>
    <string name="upomp_bypay_cardmain_hint1">"        请点击添加银行卡按钮添加银行卡！"</string>
    <string name="upomp_bypay_cardmain_hint2">"        选择您绑定的银行卡后，您可以进行以下操作：查看银行卡信息；默认卡设置；银行卡删除；余额查询！"</string>
    <string name="upomp_bypay_editinfoactivity_nochange">新手机号码与原手机号码一样，无需进行修改。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum">请输入原手机号码。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum1">原手机号码格式有误，应为11位数字。</string>
    <string name="upomp_bypay_editinfoactivity_changetelfail">更改手机号码失败！</string>
    <string name="upomp_bypay_editinfoactivity_changetelsucceed">更改手机号码成功！</string>
    <string name="upomp_bypay_editinfo_registertel">已注册手机:</string>
    <string name="upomp_bypay_editinfo_oldtel">原手机号码:</string>
    <string name="upomp_bypay_editinfo_oldtelhint">原手机号码</string>
    <string name="upomp_bypay_editinfo_newtel">新手机号码:</string>
    <string name="upomp_bypay_editinfo_newtelhint">新手机号码</string>
    <string name="upomp_bypay_editinfo_hint">"        如果您的用户名是手机号，您将不能修改手机号。"</string>
    <string name="upomp_bypay_editpassactivity_inputoldpsw">请输入原密码。</string>
    <string name="upomp_bypay_editpassactivity_oldpswfail">原密码格式有误，长度应为6-12位。</string>
    <string name="upomp_bypay_editpass_oldpsw">"原   密   码  :"</string>
    <string name="upomp_bypay_editpass_oldpswhint">原密码</string>
    <string name="upomp_bypay_getpassactivity_updatepsw">密码重置</string>
    <string name="upomp_bypay_loginactivity_userlogin">用户登录</string>
    <string name="upomp_bypay_loginactivity_loginsucceed">登录成功!</string>
    <string name="upomp_bypay_loginactivity_loginfail">登录失败!</string>
    <string name="upomp_bypay_login_username">"用   户   名  :"</string>
    <string name="upomp_bypay_login_psw">"   密      码   :"</string>
    <string name="upomp_bypay_login_webvalidcode">"校   验   码  :"</string>
    <string name="upomp_bypay_login_hint">"        请使用中国银联的注册帐号及密码登录，为保证账户安全，如果您连续五次输错密码，您的账号将被锁定三个小时，给您带来的不便敬请原谅！"</string>
    <string name="upomp_bypay_pay_it_previewdifferent">若与您预设的资料不符，极有可能是钓鱼软件，请终止支付。</string>
    <string name="upomp_bypay_pay_it_approvepay">认证支付</string>
    <string name="upomp_bypay_pay_it_expresspay">快捷支付</string>
    <string name="upomp_bypay_pay_it_valuecardpay">储值卡支付</string>
    <string name="upomp_bypay_pay_it_preventfish">"        为防止钓鱼应用，请核对您收到的95516发送的短信中，安全提示信息是否为："</string>
    <string name="upomp_bypay_pay_it_bankmobilenum">发卡行预留的手机号</string>
    <string name="upomp_bypay_pay_it_securitycode">"   密      码    :"</string>
    <string name="upomp_bypay_pay_it_pleaseaddcard">您还未关联过银行卡，请先添加银行卡。</string>
    <string name="upomp_bypay_pay_it_paycardnum">支 付 卡 号 :</string>
    <string name="upomp_bypay_pay_it_other">其他</string>
    <string name="upomp_bypay_pay_it_valueacrdtype">储值卡类型:</string>
    <string name="upomp_bypay_pay_it_choosevalueacrdtype">请选择储值卡类型</string>
    <string name="upomp_bypay_pay_it_valueacrdnum">储值卡卡号:</string>
</resources>